--- a/MySQL/基础架构.md
+++ b/MySQL/基础架构.md
@@ -1,4 +1,47 @@
-# MySQL分为Server层和存储引擎层两部分，具体结构如下图
+## MySQL分为Server层和存储引擎层两部分，具体结构如下图
 
-Server层包括连接器，分析器，优化器和执行器等，涵盖MySQL的大多数核心服务功能，以及所有的内置函数（日期，时间，数学和加密函数等）。所有跨存储引擎的功能都在这一层实现，比如存储过程、触发器、视图等。
+![MySQL-query](D:\Users\zhou_yao\workspace\just-for-review-and-zhuangB\MySQL\MySQL-query.png)
 
+
+
+**Server层**包括连接器，分析器，优化器和执行器等，涵盖MySQL的大多数核心服务功能，以及所有的内置函数（日期，时间，数学和加密函数等）。所有跨存储引擎的功能都在这一层实现，比如存储过程、触发器、视图等。
+
+**存储引擎层**负责数据的存储和提取，插件式的，支持InnoDb，MyISAM等多个存储引擎，其中InnoDB为默认存储引擎。
+
+
+
+#### Server层各组件
+
+**连接器**
+
+负责跟客户端建立连接、获取权限、维持和管理连接。需要注意的是，连接建立以后，权限就确定下来。如果发生变化，需要下次重新连接时生效
+
+长连接是数次请求使用同一个请求，短连接是查询几次后就断开，后续重连。由于数据库的连接过程是高cost的，所以一般建议使用长连接，由此引发的问题是，长连接使用的内存管理在连接对象里，容易导致OOM。
+
+解决方案：1.定期断开长连接，或者判断如果有大内存使用之后就断开。2. MySQL 5.7以上版本，大查询之后mysql_reset_connection初始化连接资源
+
+**查询缓存**
+
+查询的语句和结果以key-value的形式存在内存中，命中直接返回。
+
+不过缓存很鸡肋，表有更新会将这个表的所有缓存直接清空，更新较多的表命中率极低，只有静态表才能发挥一下优势。MySQL 8.0已经将这部分功能移除
+
+**分析器**
+
+词法分析，语法分析，看查询语句是否满足MySQL语法。报错时一般会提示第一个出现错误的位置，关注“use near”这个位置。
+
+**优化器**
+
+语句确定之后，优化器来决定选择哪个索引，两个表之前的join顺序，以确定最高效的执行方案
+
+**执行器**
+
+执行查询语句，执行之前需进行权限校验，校验通过会执行查询语句，从存储引擎中逐条拿出符合条件的行
+
+[^权限校验]: 优化器之前也做了preCheck校验，但是无法对运行时的表进行权限验证，比如使用了触发器的情况
+
+
+
+#### 日志模块
+
+查询语句只用到上述各组件即可完成操作，更新语句也需要用到上述组件，同时还用到了MySQL的日志模块，即**redo log**（重做日志）和**binlog**（归档日志）
