--- a/MySQL/基础架构.md
+++ b/MySQL/基础架构.md
@@ -32,7 +32,13 @@
 
 - **优化器**
 
-语句确定之后，优化器来决定选择哪个索引，两个表之前的join顺序，以确定最高效的执行方案
+语句确定之后，优化器来决定选择哪个索引，两个表之前的join顺序，以确定最高效的执行方案。优化器的判断标准，一个是扫描行数，越少意味着访问磁盘数据的次数越少，消耗的CPU资源越少；除此之外，还会结合是否使用临时表、是否排序等因素综合判断。
+
+**扫描行数如何判断？**
+
+InnoDB默认会选择**N**个**数据页**，统计这些页面上的不同值，得到一个平均值，然后乘以这个索引的页面数，得到这个索引的**基数（cardinality）**，即一个索引上不同值的个数。当变更的数据行数超过**1/M**的时候，会自动触发重新做一次索引统计。
+
+[^提示]: 如果MySQL扫描行数计算有很大偏差，可以通过使用analyze table xxx来修正一下
 
 - **执行器**
 
@@ -73,6 +79,14 @@ redo log和binlog不同之处
 
 下图展示了一条更新语句的执行流程
 
-<img src="D:\Users\zhou_yao\workspace\just-for-review-and-zhuangB\MySQL\Two-phase commit.png" alt="Two-phase commit" style="zoom: 50%;" />
+<img src="D:\Users\zhou_yao\workspace\just-for-review-and-zhuangB\MySQL\Two-phase commit.png" alt="Two-phase commit" style="zoom: 33%;" />
 
 其中关于redo log和binlog的部分，成为**两阶段提交**，究其原因，是因为binlog无crash-safe的能力，而redo log有，利用两阶段提交，让binlog数据和redo log一致，这样，使用binlog做数据恢复或者生成备库的时候，可以保证数据的正确性。
+
+##### 崩溃恢复的判断规则
+
+1. 如果处于写入redo log的prepare阶段，还没有写binlog，这时候崩溃，恢复后由于此时binlog还没写，redo log也没提交，所以这个事务会回滚；
+2. 如果已经写入binlog，redo log还没提交的情况下崩溃，恢复后，系统会进行判断：
+   - 如果redo log里面的事务是完整的，也就是已经有了commit标识，则直接提交
+   - 如果redo log里面的事务只有完整的prepare，则通过XID去binlog找对应的事务，判断binlog事务是否完整（statement格式最后有COMMIT；row格式的最后有一个XID event），如果是，则提交事务，否则回滚事务
+
