--- a/MySQL/索引.md
+++ b/MySQL/索引.md
@@ -37,6 +37,10 @@ B+树索引，利用索引的“最左前缀”，来定位记录。索引项是
 
 过滤条件中有一部分满足最左前缀原则，可以使用到联合索引的情况下，若必须回表，且查询条件中有用到联合索引其他字段的部分，会在回表前再近一步过滤，以减少回表。
 
+#### 索引失效
+
+对索引字段做函数操作，**即便没有改变索引的有序性**，优化器也会放弃使用索引的树搜索功能，改为全索引扫描。尤其要注意的是，有些SQL语句可能涉及到**隐式类型转换**或者**隐式字符编码转换**，无形中消除了索引的优势。
+
 #### Change Buffer
 
 当需要更新一条数据时，如果数据页恰好在内存中就直接更新，如果没在内存中的话，在不影响数据一致性的前提下，InnoDB会将这些更新操作缓存在change buffer中，等到下次这个数据页读入内存中了，再执行change buffer中有关这个页的操作，这个过程称为**merge**。
@@ -51,3 +55,13 @@ B+树索引，利用索引的“最左前缀”，来定位记录。索引项是
 - redo log写满（情况不多）
 
 **使用场景：**适用于写多读少的业务，如果是唯一索引比较多，或者写入之后马上需要查询的业务模式，反倒会起到副作用
+
+#### 字符串创建索引的场景
+
+1. 直接创建完整索引，不过可能比较占用空间
+2. 创建前缀索引，节省空间，但是要选择合适的长度来保证区分度，同时还会增加查询扫描次数，并且不能使用覆盖索引
+3. 倒序存储，再创建前缀索引，用于绕过字符串本身前缀区分度不够的问题
+4. 创建hash字段索引，查询性能稳定，有额外的存储计算消耗
+
+[^注]: 3、4两种方法都无法支持范围扫描
+
