--- a/MySQL/幻读.md
+++ b/MySQL/幻读.md
@@ -12,13 +12,37 @@ Session A在T1时刻就声明了，“我要把所有d=5的行锁住，不准别
 
 ####  数据一致性上
 
+根据图示的执行步骤，T1时刻将（5,5,5）改成了（5,5,100），T2时刻将这条记录变成（0,5,5），T4时刻表里多了一条记录（1,5,5）。
 
+再看binlog的内容，由于事务提交时binlog才会写入，所以最终binlog中的语句序列如下
 
-count()是一个聚合函数，对于返回的结果集，一行行判断，如果count函数的参数不是NULL，累计值就加1，否则不加，最后返回累计值。
+```mysql
+update t set d=5 where id=0; /*(0,0,5)*/
+update t set c=5 where id=0; /*(0,5,5)*/
 
-- **count(主键id)**：遍历整张表，每行的id都取出来，返回给server层，server层判断字段不可空，按行累加；
-- **count(1)**：遍历整张表，但是不取值，server层收到的所有行都是1，server层判断字段不为空，按行累加。之所以比count(主键)快，因为从引擎返回id会涉及到解析数据行，以及拷贝字段值的操作；
-- **count(字段)**：如果字段定义为not null，逐行从记录里读出这个字段，server层判断字段不为空，按行累加；如果是允许为null的情况下，server层判断字段可为null，字段取出还需判断是否为null，再进行累加；
-- **count(*)**：专门做了优化，不取值，按行累加。
+insert into t values(1,1,5); /*(1,1,5)*/
+update t set c=5 where id=1; /*(1,5,5)*/
 
-**效率：count(字段) < count(主键 id) < count(1) ≈ count(*)**
+update t set d=100 where d=5;/*所有d=5的行，d改成100*/
+```
+
+显而易见，如果拿这个语句序列去备库执行，或者恢复数据，都会导致数据不一致，这个问题就相当严重。
+
+### 如何解决？
+
+在一行行扫描过程中，不仅给行加上了行锁，还给行两边的空隙，也加上了间隙锁。
+
+间隙锁和行锁有不一样的地方，行锁之间是存在冲突关系的，例如读锁和写锁之间，写锁和写锁之间会存在冲突关系，从而引发阻塞。但是**间隙锁之间是不存在冲突关系的，跟间隙锁存在冲突关系的，是”向这个间隙中插入一个记录“这个操作**。
+
+间隙锁和行锁合称next-key lock，每个next-key lock是前开后闭区间，间隙锁的引入解决了幻读的问题。
+
+[^拓展]: 因为是前开后闭区间，所以当涉及到+∞时，InnoDB给每个索引加了一个不存在的最大值supremum，这样+∞也可以做闭区间处理了
+
+### 间隙锁的死锁问题
+
+![next-key lock](D:\Users\zhou_yao\workspace\just-for-review-and-zhuangB\MySQL\next-key lock.png)
+
+1. session A 执行 select … for update 语句，由于 id=9 这一行并不存在，因此会加上间隙锁 (5,10);
+2. session B 执行 select … for update 语句，同样会加上间隙锁 (5,10)，间隙锁之间不会冲突，因此这个语句可以执行成功；
+3. session B 试图插入一行 (9,9,9)，被 session A 的间隙锁挡住了，只好进入等待；
+4. session A 试图插入一行 (9,9,9)，被 session B 的间隙锁挡住了。
